force-app/main/default/objects/Opportunity_Questions__c/Opportunity_Questions__c.object-meta.xml
<CustomObject>
    <label>Opportunity Question</label>
    <nameField>
        <label>Opportunity Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>