force-app/main/default/objects/Opportunity_Questions__c/fields/Answer_Format__c.field-meta.xml
<CustomField>
    <fullName>Answer_Format__c</fullName>
    <label>Answer Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>