force-app/main/default/objects/Opportunity_Questions__c/fields/Answer_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Answer_Picklist__c</fullName>
    <label>Answer - Picklist</label>
    <type>TextArea</type>
</CustomField>