force-app/main/default/objects/Opportunity_Questions__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Questions</relationshipLabel>
    <relationshipName>Opportunity_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>