force-app/main/default/objects/Opportunity_Questions__c/fields/Question_Order__c.field-meta.xml
<CustomField>
    <fullName>Question_Order__c</fullName>
    <label>Question Order</label>
    <length>5</length>
    <type>Text</type>
</CustomField>